cluster/kubernetes/flexo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexo
  namespace: flexo
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: flexo
  replicas: 1
  template:
    metadata:
      labels:
        app: flexo
    spec:
      containers:
        - image: ghcr.io/accurate0/flexo:latest
          name: flexo
          ports:
            - containerPort: 7878
              protocol: TCP
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /pkg-cache
              name: pkg-cache
      volumes:
        - name: pkg-cache
          persistentVolumeClaim:
            claimName: flexo-pkg-cache
