cluster/kubernetes/flexo/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flexo
  name: flexo
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
  selector:
    app: flexo
