cluster/kubernetes/flexo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flexo
  namespace: flexo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  ingressClassName: nginx
  rules:
    - host: arch-mirror.anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flexo
                port:
                  number: 80
  tls:
    - secretName: arch-mirror-internal-tls
      hosts:
        - arch-mirror.anurag.sh
